--- a/web.config
+++ b/web.config
@@ -22,8 +22,8 @@
   </appSettings>
   <connectionStrings>
     <clear />
-    <add name="CMSConnectionString" connectionString="Server=tcp:ve9m8diant.database.windows.net,1433;Database=DCKentiAITi9aO7x;User ID=dc-k7-1@ve9m8diant;Password=Test@42!;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
-    <!-- <add name="CMSConnectionString" connectionString="Persist Security Info=False;Integrated Security=SSPI;database=K7_Demo1;server=HOMEPC\SQLEXPRESS;Current Language=English;Connection Timeout=240;" /> -->
+    <!-- <add name="CMSConnectionString" connectionString="Server=tcp:ve9m8diant.database.windows.net,1433;Database=DCKentiAITi9aO7x;User ID=dc-k7-1@ve9m8diant;Password=Test@42!;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" /> -->
+    <add name="CMSConnectionString" connectionString="Persist Security Info=False;Integrated Security=SSPI;database=K7_Demo1;server=HOMEPC\SQLEXPRESS;Current Language=English;Connection Timeout=240;" />
   </connectionStrings>
   <system.web>
     <pages validateRequest="false" clientIDMode="AutoID">
